--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -140,6 +140,20 @@ input[type=number] {
     align-items: center;
 }
 
+.copyCharacter {
+    position: absolute;
+    bottom: -9px;
+    right: -9px;
+    background-color: white;
+    height: 50px;
+    width: 50px;
+    transition: .6s;
+    border-radius: 25px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .zindexNegOne {
     z-index: -1;
 }
@@ -149,9 +163,19 @@ input[type=number] {
     left: 30px;
 }
 
-.centerIcon {
+.right-corner-button:hover .copyCharacter {
+    bottom: 30px;
+    right: 30px;
+}
+
+.centerIconRight {
     bottom: 0px !important;
-    left: 0px !important;
+    right: 0px !important;
+}
+
+.centerIconLeft {
+    bottom: 0px !important;
+    left: 0px !important; 
 }
 
 .downloadAsPregen i {
@@ -168,7 +192,7 @@ input[type=number] {
     cursor: pointer;
 }
 
-.bannerTooltip {
+.bannerTooltipLeft {
     position: absolute;
     width: 0px;
     background: lightgray;
@@ -180,16 +204,43 @@ input[type=number] {
     border-top-right-radius: 5px;
     overflow: hidden;
     transition: .6s;
-    transition-delay: 2s;
 }
 
-.bannerTooltip p {
+.bannerTooltipLeft p {
     margin: 0;
     padding-left: 13px;
     width: 162px;
 }
 
-.downloadAsPregen:hover .bannerTooltip {
+.downloadAsPregen:hover .bannerTooltipLeft {
+    width: 162px;
+}
+
+.bannerTooltipRight {
+    position: absolute;
+    width: 0px;
+    background: lightgray;
+    font-size: 13px;
+    right: 17px;
+    padding: 2px 10px 2px 5px;
+    z-index: -3;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+    overflow: hidden;
+    transition: .6s;
+}
+
+.singleBanner {
+    bottom: 5px;
+}
+
+.bannerTooltipRight p {
+    margin: 0;
+    padding-left: 13px;
+    width: 162px;
+}
+
+.copyCharacter:hover .bannerTooltipRight, .right-corner-button:hover .singleBanner {
     width: 162px;
 }
 
@@ -204,6 +255,11 @@ input[type=number] {
     right: 5px;
 }
 
+.right-corner-button .copyCharacter i {
+    bottom: 10px;
+    right: 10px;
+}
+
 .displayNone {
     display: none;
 }
@@ -214,7 +270,7 @@ input[type=number] {
     margin-left: 10px
 }
 
-.fa-file-download, .fa-edit, .fa-save {
+.fa-file-download, .fa-edit, .fa-save, .fa-clone {
     font-size: 30px;
     color: gray
 }
@@ -224,7 +280,7 @@ input[type=number] {
     color: gray
 }
 
-.fa-file-download:hover, .fa-edit:hover, .fa-save:hover, .fa-window-close:hover {
+.fa-file-download:hover, .fa-edit:hover, .fa-save:hover, .fa-window-close:hover, .fa-clone:hover  {
     color: #2192b8;
 }
 
