--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -1,13 +1,13 @@
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 /* Firefox */
 input[type=number] {
-  -moz-appearance: textfield;
+    -moz-appearance: textfield;
 }
 
 .fa-spinner {
@@ -23,6 +23,7 @@ input[type=number] {
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(360deg);
     }
@@ -57,7 +58,7 @@ input[type=number] {
     -webkit-box-shadow: 5px 5px 15px 5px #000000;
     box-shadow: 5px 5px 15px 5px #000000;
 }
-  
+
 .downloadingBanner h4, .downloadingBanner p {
     background: transparent;
     color: white;
@@ -66,14 +67,14 @@ input[type=number] {
 }
 
 .fakebutton:hover {
-    background:rgba(173, 216, 230, 0.50);
+    background: rgba(173, 216, 230, 0.50);
     transition: .8s;
     cursor: pointer;
     border-radius: 5px;
 }
 
 .fakebutton:active {
-    background:rgba(173, 216, 230, 0.75);
+    background: rgba(173, 216, 230, 0.75);
     transition: 0s;
 }
 
@@ -104,6 +105,34 @@ input[type=number] {
     bottom: 0px;
     justify-content: space-between;
     align-items: center;
+}
+
+.generalNotesButton {
+    position: sticky;
+    top: 0px;
+    bottom: unset;
+    border-bottom-right-radius: 50px;
+}
+
+.generalNotesButton i {
+    position: absolute;
+    top: -4px;
+    left: 5px;
+}
+
+.sidebar {
+    transform: translate3d(-280px, 0px, 0px);
+    position: absolute;
+    width: 280px;
+    background: #263249;
+    color: #eee;
+    left: 0;
+    height: 100%;
+    transition: all .3s;
+}
+
+.open {
+    transform: translate3d(280px, 0, 0);
 }
 
 .corner-button {
@@ -175,7 +204,7 @@ input[type=number] {
 
 .centerIconLeft {
     bottom: 0px !important;
-    left: 0px !important; 
+    left: 0px !important;
 }
 
 .downloadAsPregen i {
@@ -187,7 +216,8 @@ input[type=number] {
 }
 
 .downloadAsPregen:hover i {
-    color:#2192b8;;
+    color: #2192b8;
+    ;
     transition: .6s;
     cursor: pointer;
 }
@@ -270,7 +300,7 @@ input[type=number] {
     margin-left: 10px
 }
 
-.fa-file-download, .fa-edit, .fa-save, .fa-clone {
+.fa-file-download, .fa-edit, .fa-save, .fa-clone, .fa-book-open {
     font-size: 30px;
     color: gray
 }
@@ -280,7 +310,7 @@ input[type=number] {
     color: gray
 }
 
-.fa-file-download:hover, .fa-edit:hover, .fa-save:hover, .fa-window-close:hover, .fa-clone:hover  {
+.fa-file-download:hover, .fa-edit:hover, .fa-save:hover, .fa-window-close:hover, .fa-clone:hover, .fa-book-open:hover {
     color: #2192b8;
 }
 
@@ -350,6 +380,7 @@ input, textarea {
 .plates p {
     font-family: 'Vollkorn SC', serif;
 }
+
 .filledOut p {
     border-bottom: 2px solid;
     padding: 1px 5px;
@@ -378,6 +409,7 @@ input, textarea {
     width: 28px;
     text-align: center;
 }
+
 input.levelLocation {
     left: 493px;
 }
@@ -394,6 +426,7 @@ input.levelLocation {
     left: 308px;
     top: 44px;
 }
+
 input.primarylevelLocation {
     left: 295px;
     width: 25px;
@@ -414,6 +447,7 @@ input.primarylevelLocation {
     top: 43px;
     width: 25px;
 }
+
 input.secondarylevelLocation {
     left: 416px;
     top: 44px;
@@ -495,7 +529,7 @@ input.secondarylevelLocation {
 }
 
 .statRowsShell div:nth-child(even), .movementRowsSell div:nth-child(even), .vitalShell div:nth-child(even),
- .rangeShell div:nth-child(odd) {
+.rangeShell div:nth-child(odd) {
     background: lightgray;
 }
 
@@ -504,9 +538,9 @@ input.secondarylevelLocation {
 }
 
 .statRowsShell p, .movementRowsSell p, .stressThresholdShell p, .stressThresholdShell input, .rangeShell p, .rangeShell input,
- .socialShell p, .socialShell input, .skillShell p, .skillShell input, .cashAndGearShell p, .cashAndGearShell input, .baseCombatStatsShell p,
- .armorBlockShell p, .armorBlockShell input, .shieldBlockShell p, .shieldBlockShell input, .weaponProfileShell p,
- .weaponProfileShell input, .statsShell input, .movementShell input, .vitalsShell input {
+.socialShell p, .socialShell input, .skillShell p, .skillShell input, .cashAndGearShell p, .cashAndGearShell input, .baseCombatStatsShell p,
+.armorBlockShell p, .armorBlockShell input, .shieldBlockShell p, .shieldBlockShell input, .weaponProfileShell p,
+.weaponProfileShell input, .statsShell input, .movementShell input, .vitalsShell input {
     position: unset !important;
     z-index: 1;
     margin: 0;
@@ -551,6 +585,7 @@ input.secondarylevelLocation {
     width: 48px;
     text-align: center;
 }
+
 .strConfrontationLocation {
     width: 48px;
     text-align: center;
@@ -562,6 +597,7 @@ input.secondarylevelLocation {
     width: 80px;
     text-align: center;
 }
+
 .shownGearCarryLocation {
     left: 621px;
     top: 488px;
@@ -575,6 +611,7 @@ input.secondarylevelLocation {
     width: 48px;
     text-align: center;
 }
+
 .dexConfrontationLocation {
     width: 48px;
     text-align: center;
@@ -632,6 +669,7 @@ input.secondarylevelLocation {
     width: 48px;
     text-align: center;
 }
+
 .conConfrontationLocation {
     width: 48px;
     text-align: center;
@@ -643,6 +681,7 @@ input.secondarylevelLocation {
     width: 48px;
     text-align: center;
 }
+
 .intConfrontationLocation {
     width: 48px;
     text-align: center;
@@ -654,6 +693,7 @@ input.secondarylevelLocation {
     width: 48px;
     text-align: center;
 }
+
 .wisConfrontationLocation {
     width: 48px;
     text-align: center;
@@ -665,6 +705,7 @@ input.secondarylevelLocation {
     width: 48px;
     text-align: center;
 }
+
 .chaConfrontationLocation {
     width: 48px;
     text-align: center;
@@ -700,35 +741,44 @@ input.secondarylevelLocation {
     width: 48px;
     text-align: center;
 }
+
 .crawlLengthLocation {
     width: 48px;
 }
+
 .walkLocation {
     width: 48px;
     text-align: center;
 }
+
 .walkLengthLocation {
     width: 48px;
 }
+
 .jogLocation {
     width: 48px;
     text-align: center;
 }
+
 .jogLengthLocation {
     width: 48px;
 }
+
 .runLocation {
     width: 48px;
     text-align: center;
 }
+
 .runLengthLocation {
     background: #f1f1f1;
     width: 153px;
 }
+
 .sprintLocation {
     width: 48px;
     text-align: center;
 }
+
 .sprintLengthLocation {
     background: white;
     width: 153px;
@@ -738,17 +788,21 @@ input.secondarylevelLocation {
     top: 33px;
     width: 153px;
 }
+
 .walkStrike {
     top: 56px;
     width: 153px;
 }
+
 .jogStrike {
     top: 80px;
     width: 153px;
 }
+
 .runStrike {
     top: 104px;
 }
+
 .sprintStrike {
     top: 128px;
 }
@@ -816,6 +870,7 @@ input.secondarylevelLocation {
     text-align: center;
     font-size: 19px;
 }
+
 .weaponsquare .recovery {
     position: absolute;
     top: 11px;
@@ -825,6 +880,7 @@ input.secondarylevelLocation {
     text-align: center;
     font-size: 18px;
 }
+
 .weaponsquare .init {
     position: absolute;
     top: 9px;
@@ -844,6 +900,7 @@ input.secondarylevelLocation {
     text-align: center;
     font-size: 18px;
 }
+
 .weaponsquare .encumb {
     position: absolute;
     top: 62px;
@@ -853,6 +910,7 @@ input.secondarylevelLocation {
     text-align: center;
     font-size: 18px;
 }
+
 .weaponsquare .drshell {
     display: flex;
     justify-content: space-around;
@@ -863,6 +921,31 @@ input.secondarylevelLocation {
     height: 40px;
     width: 47px;
     text-align: center;
+}
+
+.drshell .tooltip, .damage .tooltip {
+    position: absolute;
+    right: -63px;
+    z-index: -111;
+    background: lightgrey;
+    padding: 5px;
+    height: 64px;
+    width: 58px;
+    border-radius: 5px;
+    opacity: 0;
+    transition: .6s;
+}
+
+.damage .tooltip {
+    height: 98px;
+    width: 62px;
+    right: -65px;
+}
+
+.drshell:hover .tooltip, .damage:hover .tooltip {
+    opacity: 1;
+    transition-delay: 1s;
+    z-index: 9999;
 }
 
 #armorDr {
@@ -895,6 +978,15 @@ input.secondarylevelLocation {
     word-wrap: break-word;
     text-align: center;
     font-size: 12px;
+    position: absolute;
+}
+
+.weaponsquare .damage p {
+    word-wrap: break-word;
+    text-align: center;
+    font-size: 12px;
+    height: 38px;
+    width: 58px;
 }
 
 .weaponsquare .parry {
@@ -1007,6 +1099,7 @@ input.secondarylevelLocation {
     width: 74px;
     text-align: center;
 }
+
 .currentfavorLocation {
     top: 489px;
     left: 545px;
@@ -1053,7 +1146,7 @@ input.secondarylevelLocation {
     text-align: center;
 }
 
-.rangeShell div p:first-child, .rangeShell div p:nth-child(3){
+.rangeShell div p:first-child, .rangeShell div p:nth-child(3) {
     font-family: 'Vollkorn SC', serif;
     font-size: 13px;
     font-weight: bold;
@@ -1071,37 +1164,47 @@ input.secondarylevelLocation {
     top: 446px;
     left: 674px;
 }
+
 .two {
     top: 446px;
 }
+
 .three {
     top: 468px;
     left: 674px;
 }
+
 .four {
     top: 468px;
 }
+
 .five {
     top: 490px;
     left: 674px;
 }
+
 .six {
     top: 490px;
 }
+
 .seven {
     top: 510px;
     left: 674px;
 }
+
 .eight {
     top: 510px;
 }
+
 .nine {
     top: 530px;
     left: 674px;
 }
+
 .ten {
     top: 530px;
 }
+
 .eleven {
     top: 552px;
     left: 674px;
@@ -1295,6 +1398,7 @@ input.secondarylevelLocation {
 .contactsLocation {
     width: 426px;
 }
+
 .contactstextArea {
     position: absolute !important;
     width: 426px;
@@ -1332,6 +1436,7 @@ input.secondarylevelLocation {
     overflow: hidden;
     padding: 0 2px;
 }
+
 .abilitiesonetextArea {
     max-width: 33%;
     min-width: 33%;
@@ -1350,12 +1455,14 @@ input.secondarylevelLocation {
     overflow: hidden;
     position: absolute;
 }
+
 .abilitiesthreeLocation {
     top: 0px;
     height: 139px;
     overflow: hidden;
     padding: 0 2px;
 }
+
 .abilitiesthreetextArea {
     width: 33%;
     max-width: 33%;
@@ -1387,6 +1494,7 @@ input.secondarylevelLocation {
     left: 395px;
     width: 403px;
 }
+
 .generalNotesShell div .generalNoteStriping div {
     height: 19.6px;
 }
@@ -1398,11 +1506,9 @@ input.secondarylevelLocation {
 .generalnotestextArea {
     position: absolute;
     top: 23px;
-    width: 403px;
-    max-width: 403px;
-    min-width: 403px;
-    max-height: 167px;
-    min-height: 167px;
+    width: 815px;
+    max-width: 815px;
+    max-height: 1033px;
     overflow: hidden;
 }
 
@@ -1514,7 +1620,7 @@ input.secondarylevelLocation {
     font-weight: bold;
     padding: 1px 0;
 }
- 
+
 .circle {
     border-radius: 50px/50px;
     border: solid 2px #000;
@@ -1523,6 +1629,7 @@ input.secondarylevelLocation {
     position: absolute;
     z-index: 2;
 }
+
 .panickedCircle {
     width: 24px !important;
     position: absolute;
@@ -1677,12 +1784,15 @@ input.secondarylevelLocation {
 .weaponProfileone {
     left: 169px;
 }
+
 .weaponProfiletwo {
     left: 320px;
 }
+
 .weaponProfilethree {
     left: 472px;
 }
+
 .weaponProfilefour {
     width: 174px;
     left: 625px;
@@ -1751,6 +1861,7 @@ input.secondarylevelLocation {
 .weaponnameLocation {
     width: 154px;
 }
+
 .weaponnamefour {
     width: 173px
 }
@@ -1886,7 +1997,8 @@ input.secondarylevelLocation {
 .contactStriping div {
     height: 19.6px;
 }
-.contactStriping div:nth-child(even)  {
+
+.contactStriping div:nth-child(even) {
     background: lightgray;
 }
 
@@ -1898,7 +2010,8 @@ input.secondarylevelLocation {
 .traitsLocation {
     width: 149px;
     text-indent: 46px;
-} 
+}
+
 .traitstextArea {
     max-width: 149px;
     min-width: 149px;
@@ -1906,10 +2019,12 @@ input.secondarylevelLocation {
     min-height: 42px;
     overflow: hidden;
 }
+
 textarea.traitsLocation {
     height: 54px;
     overflow: hidden;
 }
+
 .traitsfour {
     max-width: 173px;
     min-width: 173px;
@@ -1958,6 +2073,7 @@ textarea.traitsLocation {
     left: 26px;
     text-align: center;
 }
+
 .initfour {
     left: 50px !important
 }
@@ -1989,24 +2105,28 @@ textarea.traitsLocation {
     left: 1px;
     text-align: center;
 }
+
 .totalrecoveryLocation {
     width: 25px;
     top: 282px;
     left: 26px;
     text-align: center;
 }
+
 .totalparryLocation {
     width: 25px;
     top: 282px;
     left: 51px;
     text-align: center;
 }
+
 .totaldamageLocation {
     width: 25px;
     top: 282px;
     left: 76px;
     text-align: center;
 }
+
 .totalinitLocation {
     width: 25px;
     top: 282px;
@@ -2148,8 +2268,8 @@ textarea.traitsLocation {
 }
 
 .advSkillBackgroundShell div .skillRow h2:nth-child(2), .advSkillBackgroundShell div .skillRow h2:nth-child(3),
- .advSkillBackgroundShell div .skillRow h2:nth-child(4), .advSkillBackgroundShell div .skillRow p:nth-child(2),
-  .advSkillBackgroundShell div .skillRow p:nth-child(3), .advSkillBackgroundShell div .skillRow p:nth-child(4) {
+.advSkillBackgroundShell div .skillRow h2:nth-child(4), .advSkillBackgroundShell div .skillRow p:nth-child(2),
+.advSkillBackgroundShell div .skillRow p:nth-child(3), .advSkillBackgroundShell div .skillRow p:nth-child(4) {
     width: 40px;
 }
 
@@ -2193,4 +2313,4 @@ textarea.traitsLocation {
 
 #nativename {
     width: 93px
- }
+}
