--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -540,7 +540,7 @@ input.secondarylevelLocation {
 .statRowsShell p, .movementRowsSell p, .stressThresholdShell p, .stressThresholdShell input, .rangeShell p, .rangeShell input,
 .socialShell p, .socialShell input, .skillShell p, .skillShell input, .cashAndGearShell p, .cashAndGearShell input, .baseCombatStatsShell p,
 .armorBlockShell p, .armorBlockShell input, .shieldBlockShell p, .shieldBlockShell input, .weaponProfileShell p,
-.weaponProfileShell input, .statsShell input, .movementShell input, .vitalsShell input {
+.weaponProfileShell input, .statsShell input, .movementShell input, .vitalsShell input, .combatSkills p, .combatSkills input {
     position: unset !important;
     z-index: 1;
     margin: 0;
@@ -620,7 +620,7 @@ input.secondarylevelLocation {
 .baseCombatStatsShell {
     position: absolute;
     top: 532px;
-    left: 195px;
+    left: 187px;
     width: 177px;
 }
 
@@ -1508,12 +1508,13 @@ input.secondarylevelLocation {
     top: 23px;
     width: 815px;
     max-width: 815px;
+    height: 1033px;
     max-height: 1033px;
     overflow: hidden;
 }
 
 .cashAndGearShell {
-    top: 335px;
+    top: 20px;
     position: absolute;
     width: 776px;
     left: 20px;
@@ -1905,8 +1906,8 @@ input.secondarylevelLocation {
 }
 
 .bonusfour {
-    max-height: 81px;
-    min-height: 81px;
+    max-height: 82px;
+    min-height: 82px;
 }
 
 .weaponProfilefour .weaponCalculatedStats:nth-child(odd) {
@@ -2136,9 +2137,12 @@ textarea.traitsLocation {
 
 .skillShell {
     position: absolute;
-    top: 20px;
+    top: 211px;
     left: 20px;
     width: 776px;
+}
+
+.innerSkillShell {
     display: flex;
     justify-content: space-between;
 }
@@ -2159,7 +2163,7 @@ textarea.traitsLocation {
     position: relative;
 }
 
-.skillMods {
+.skillMods, .combatMods {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -2173,18 +2177,26 @@ textarea.traitsLocation {
     height: 19.6px;
 }
 
-.skillMods div:nth-child(odd) {
+.combatMods div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 25%;
+    height: 19.6px;
+}
+
+.skillMods div:nth-child(odd), .combatMods div:nth-child(odd) {
     background: lightgray
 }
 
-.skillMods div p:first-child, .skillAdept p:first-child, .skillRow p:first-child {
+.skillMods div p:first-child, .skillAdept p:first-child, .skillRow p:first-child, .combatMods p:first-child {
     font-family: 'Vollkorn SC', serif;
     font-weight: bold;
     margin-top: 2px;
     padding-left: 5px;
 }
 
-.skillMods div p:nth-child(2) {
+.skillMods div p:nth-child(2), .combatMods div p:nth-child(2) {
     width: 24px;
     text-align: center;
 }
@@ -2212,7 +2224,7 @@ textarea.traitsLocation {
     justify-content: space-between;
 }
 
-.skillsuiteShell .skillRow:nth-child(odd) {
+.skillsuiteShell .skillRow:nth-child(odd), .combatRow .skillRow:nth-child(odd) {
     background: lightgray
 }
 
@@ -2313,4 +2325,103 @@ textarea.traitsLocation {
 
 #nativename {
     width: 93px
+}
+
+.combatshell {
+    position: absolute;
+    top: 532px;
+    left: 185px;
+    display: flex;
+}
+
+.combatSkills {
+    width: 225px;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    border-right: 2px solid #222;
+}
+
+.combatAdvancedSkill {
+    width: 386px;
+    height: 186px;
+}
+
+.combatRow .skillRow {
+    display: flex;
+}
+
+.combatRow div h2 {
+    text-align: left;
+    padding-left: 10px;
+    margin-right: -1px;
+}
+
+.combatRow .skillRow p, .combatRow .skillRow h2, .combatRow .skillRow input, .combatCost, .combatRank {
+    width: 25%;
+}
+
+.combatRow .skillRow p:first-child, .combatRow .skillRow h2:first-child, .combatInput {
+    width: 51%;
+}
+
+.combatAdept {
+    display: flex;
+    justify-content: space-between;
+    border-top: 2px solid lightgrey;
+    height: 19.6px;
+}
+
+.combatAdept p:first-child {
+    font-family: 'Vollkorn SC', serif;
+    font-weight: bold;
+    margin-top: 2px;
+    padding-left: 5px;
+}
+
+.combatAdept input, .combatAdept p {
+    width: 50%;
+    text-align: center;
+}
+
+.combatSkillRowShell .skillRow h2, .combatRanks, .combatCost {
+    width: 25% !important;
+}
+
+.combatSkillRowShell .skillRow h2:first-child, .combatInput {
+    width: 50% !important;
+}
+
+.combatSkillRowShell .stripings div {
+    height: 19.6px;
+    width: 50%;
+}
+
+.stripeDiv div:first-child {
+    width: 50%;
+    border-right: 2px solid grey;
+}
+
+.stripeDiv:first-child div:first-child {
+    border-right: none;
+}
+
+.stripeDiv div:nth-child(2) {
+    width: 50%;
+    border-right: 2px solid #222;
+    background: unset !important
+}
+
+.combatSkillRowShell .stripings {
+    width: 193px;
+}
+
+.combatSkillRowShell .stripings .stripeDiv {
+    width: 100%;
+    height: 20px;
+}
+
+.combatSkillRowShell .stripings .stripeDiv div {
+    min-width: unset;
+    height: 20px;
 }
