--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -87,6 +87,7 @@ h4 {
 .character p:last-child {
     padding-right: 70px;
     line-height: 1.3;
+    margin: 10px;
 }
 
 .characterListButtonShell {
