--- a/src/components/character/views/components/pageOne/plates.css
+++ b/src/components/character/views/components/pageOne/plates.css
@@ -38,18 +38,24 @@
 }
 
 .crpPlate {
-    left: 524px;
-    top: 47px;
+    left: 48px;
+    top: 70px;
+}
+
+.crpTitle {
+    left: 20px;
+    top: 70px;
+    font-weight: bold;
 }
 
 .nextExPlate {
-    left: 20px;
-    top: 67px;
+    left: 263px;
+    top: 70px;
 }
 
 .currentExPlate {
-    left: 250px;
-    top: 67px;
+    left: 153px;
+    top: 70px;
 }
 
 .primaryDrawbackPlate {
