--- a/src/components/character/views/components/pairComponents/editPair.css
+++ b/src/components/character/views/components/pairComponents/editPair.css
@@ -37,6 +37,7 @@
 
 .viewPairListStriping {
     position: relative;
+    overflow: hidden;
 }
 
 .viewPairListStriping .stripesShell, .viewPairListStriping .contentPairListShell, .viewPairListStriping .contentListShell {
